# arqee

./: .gitignore  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
arqee/: CONST.py  ModelObject.py  __init__.py  divide_segmentation.py  downloads.py  inference.py  utils.py  utils_graphnet.py  visualization.py
examples/: EXAMPLES_README.md
tutorial/: tutorial_gcnr.ipynb
tutorial/.ipynb_checkpoints/: arqee_toturial-checkpoint.ipynb  tutorial_end_to_end_quality_prediction-checkpoint.ipynb  tutorial_gcnr-checkpoint.ipynb
