[tool.poetry]
name = "arqee"
version = "1.0.3"
description = ""
authors = ["Gilles Van De Vyver <gillesvandevyver@hotmail.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
numpy = ">=1.19"
onnxruntime = ">=1.14"
requests = ">=2.0"
tqdm = ">=4.0"
scikit-image = ">=0.20"
opencv-python = ">=4.9"
huggingface_hub = ">=0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
